--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevBDarius</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/44057641c5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,17 +29,25 @@
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          ">About</a>
+          ">Projects</a>
         </li>
         <li class="nav__link">
           <a href="#" class="
             nav__link--anchor
             link__hover-effect
             link__hover-effect--black
-          ">About</a>
+          ">Contact</a>
+        </li>
+        <li class="nav__link">
+          <a href="#" class="
+            nav__link--anchor
+            link__hover-effect
+            link__hover-effect--black
+          "><i class="fas fa-adjust"></i></a>
         </li>
       </ul>
     </nav>
+
   </section>
 </body>
 
