--- a/index.html
+++ b/index.html
@@ -47,7 +47,125 @@
         </li>
       </ul>
     </nav>
+    <header class="header">
+      <div class="header__content">
+        <h1 class="title">Hey! I am</h1>
+        <h1 class="title orange">DevBDarius</h1>
+        <p class="header__para">
+          I'm a <b class="orange">Frontend Software Engineer</b> with a passion for building polished web apps
+        </p>
+      </div>
+      <div class="social__list">
+        <a href="#" class="social__link click">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" class="social__link click">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="./assets/toDelete (probably)/David Bragg Resume.pdf" target="_blank" class="social__link click">
+          <i class="fas fa-file-pdf"></i>
+        </a>
+      </div>
+    </header>
+    <button class="mail__btn click">
+      <i class="fas fa-envelope"></i>
+    </button>
+    <a href="#projects" class="scroll">
+      <div class="scroll__icon click"></div>
+    </a>
+  </section>
 
+  <section id="projects">
+    <div class="container">
+      <div class="row">
+        <h1 class="section__title">
+          Here are some of my <span class="orange">projects</span>
+        </h1>
+        <ul class="project__list">
+          <li class="project">
+            <div class="project__wrapper">
+              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Project
+                </h3>
+                <h4 class="project__description--subtitle">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
+                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
+                  accusantium?
+                </p>
+                <div class="project__description--links">
+                  <a href="" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__wrapper">
+              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Project
+                </h3>
+                <h4 class="project__description--subtitle">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
+                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
+                  accusantium?
+                </p>
+                <div class="project__description--links">
+                  <a href="" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__wrapper">
+              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Project
+                </h3>
+                <h4 class="project__description--subtitle">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
+                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
+                  accusantium?
+                </p>
+                <div class="project__description--links">
+                  <a href="" class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </section>
 </body>
 
