--- a/index.html
+++ b/index.html
@@ -167,6 +167,39 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="container">
+      <figure>
+        <img src="./assets/logo.svg" alt="">
+      </figure>
+      <div class="footer__social--list">
+        <a href="#" class="
+          footer__social--link
+          liver__hover-effect
+          liver__hover-effect--white
+        "> Github</a>
+        <a href="#" class="
+          footer__social--link
+          liver__hover-effect
+          liver__hover-effect--white
+        "> LinkedIn</a>
+        <a href="#" class="
+          footer__social--link
+          liver__hover-effect
+          liver__hover-effect--white
+        "> Contact</a>
+        <a href="#" class="
+          footer__social--link
+          liver__hover-effect
+          liver__hover-effect--white
+        "> Resume</a>
+      </div>
+      <div class="footer__copyright">
+        Copyright &copy; DevBDarius
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
