--- a/index.html
+++ b/index.html
@@ -170,33 +170,35 @@
 
   <footer>
     <div class="container">
-      <figure>
-        <img src="./assets/logo.svg" alt="">
-      </figure>
-      <div class="footer__social--list">
-        <a href="#" class="
-          footer__social--link
-          liver__hover-effect
-          liver__hover-effect--white
-        "> Github</a>
-        <a href="#" class="
-          footer__social--link
-          liver__hover-effect
-          liver__hover-effect--white
-        "> LinkedIn</a>
-        <a href="#" class="
-          footer__social--link
-          liver__hover-effect
-          liver__hover-effect--white
-        "> Contact</a>
-        <a href="#" class="
-          footer__social--link
-          liver__hover-effect
-          liver__hover-effect--white
-        "> Resume</a>
-      </div>
-      <div class="footer__copyright">
-        Copyright &copy; DevBDarius
+      <div class="row footer__row">
+        <figure>
+          <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+        </figure>
+        <div class="footer__social--list">
+          <a href="#" class="
+            footer__social--link
+            liver__hover-effect
+            liver__hover-effect--white
+          "> Github</a>
+          <a href="#" class="
+            footer__social--link
+            liver__hover-effect
+            liver__hover-effect--white
+          "> LinkedIn</a>
+          <a href="#" class="
+            footer__social--link
+            liver__hover-effect
+            liver__hover-effect--white
+          "> Contact</a>
+          <a href="#" class="
+            footer__social--link
+            liver__hover-effect
+            liver__hover-effect--white
+          "> Resume</a>
+        </div>
+        <div class="footer__copyright">
+          Copyright &copy; DevBDarius
+        </div>
       </div>
     </div>
   </footer>
