--- a/index.html
+++ b/index.html
@@ -73,6 +73,67 @@
     <a href="#projects" class="scroll">
       <div class="scroll__icon click"></div>
     </a>
+    <div class="modal">
+      <div class="modal__half modal__about">
+        <h3 class="modal__title modal__title--about">Here's a little about me</h3>
+        <h4 class="modal__subtitle modal__subtitle--about">Frontend software engineer</h4>
+        <p class="modal__para">
+          Lorem <span class="orange">ipsum</span>, dolor sit amet consectetur <span class="orange">adipisicing</span> elit. Ex ipsum eos, quia facere reprehenderit, <span class="orange">autem</span> hic architecto repellat harum, at quam ratione quis officiis <span class="orange">consectetur</span> cumque nobis recusandae eaque blanditiis.
+          <br>
+          Lorem ipsum dolor
+        </p>
+        <div class="modal__languages">
+          <figure class="modal__language">
+            <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+            <span class="language__name">HTML</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+            <span class="language__name">HTML</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+            <span class="language__name">HTML</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+            <span class="language__name">HTML</span>
+          </figure>
+        </div>
+      </div>
+      <div class="modal__half modal__contact">
+        <h3 class="modal__title modal__title--contact">
+          Let's have a chat!
+        </h3>
+        <h4 class="modal__subtitle modal__subtitle--contact">
+          I'm currently open to new opportunities.
+        </h4>
+        <form action="" id="contact__form">
+          <div class="form__item">
+            <label class="form__item--label">Name</label>
+            <input class="input" type="text" name="user_name" required>
+          </div>
+          <div class="form__item">
+            <label class="form__item--label">Email</label>
+            <input class="input" type="email" name="user_email" required>
+          </div>
+          <div class="form__item">
+            <label class="form__item--label">Message</label>
+            <textarea class="input" type="text" name="message" required></textarea>
+          </div>
+          <button id="contact__submit" class="form__submit">
+            Send it my way
+          </button>
+        </form>
+        <div class="modal__overlay modal__overlay--loading">
+          <i class="fas fa-spinner"></i>
+        </div>
+        <div class="modal__overlay modal__overlay--success">
+          Thanks for the message! Looking forward to speaking to you soon.
+        </div>
+      </div>
+      <i class="fas fa-times modal__exit click"></i>
+    </div>
   </section>
 
   <section id="projects">
@@ -177,23 +238,23 @@
         <div class="footer__social--list">
           <a href="#" class="
             footer__social--link
-            liver__hover-effect
-            liver__hover-effect--white
+            link__hover-effect
+            link__hover-effect--white
           "> Github</a>
           <a href="#" class="
             footer__social--link
-            liver__hover-effect
-            liver__hover-effect--white
+            link__hover-effect
+            link__hover-effect--white
           "> LinkedIn</a>
           <a href="#" class="
             footer__social--link
-            liver__hover-effect
-            liver__hover-effect--white
+            link__hover-effect
+            link__hover-effect--white
           "> Contact</a>
           <a href="#" class="
             footer__social--link
-            liver__hover-effect
-            liver__hover-effect--white
+            link__hover-effect
+            link__hover-effect--white
           "> Resume</a>
         </div>
         <div class="footer__copyright">
