Cool squiggly shapes background

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <section id="landing-page">
+  <section id="landing-page" onmousemove="moveBackground(event)">
     <nav>
       <figure>
         <img id="personal-logo" src="./assets/logo.svg" alt="">
@@ -61,7 +61,8 @@
         <h1 class="title">Hey! I am</h1>
         <h1 class="title orange">DevBDarius</h1>
         <p class="header__para">
-          I'm a <b class="orange">Frontend Software Engineer</b> with a passion for building polished web apps. Here's a bit more <b class="orange click" onclick="toggleModal()">about me.</b>
+          I'm a <b class="orange">Frontend Software Engineer</b> with a passion for building polished web apps. Here's a
+          bit more <b class="orange click" onclick="toggleModal()">about me.</b>
         </p>
       </div>
       <div class="social__list">
@@ -153,9 +154,19 @@
         </div>
       </div>
     </div>
+    <!-- Triangles and sh -->
+    <img src="./assets/semi circle.svg" class="shape shape--0">
+    <img src="./assets/circle.svg" class="shape shape--1">
+    <img src="./assets/squiggly.svg" class="shape shape--2">
+    <img src="./assets/circle.svg" class="shape shape--3">
+    <img src="./assets/triangle.svg" class="shape shape--4">
+    <img src="./assets/circle.svg" class="shape shape--5">
+    <img src="./assets/squiggly.svg" class="shape shape--6">
+    <img src="./assets/circle.svg" class="shape shape--7">
+    <img src="./assets/semi circle.svg" class="shape shape--8">
   </section>
 
-  <section id="projects">
+  <section id=" projects">
     <div class="container">
       <div class="row">
         <h1 class="section__title">
