--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img id="personal-logo" src="./assets/logo.svg" alt="">
       </figure>
       <ul class="nav__link--list">
-        <li class="nav__link">
+        <li class="nav__link" onclick="toggleModal()">
           <a href="#" class="
             nav__link--anchor
             link__hover-effect
@@ -34,13 +34,13 @@
           ">About</a>
         </li>
         <li class="nav__link">
-          <a href="#" class="
+          <a href="#projects" class="
             nav__link--anchor
             link__hover-effect
-            link__hover-effect--black
+            link__hover-effect- -black
           ">Projects</a>
         </li>
-        <li class="nav__link">
+        <li class="nav__link" onclick="toggleModal()">
           <a href="#" class="
             nav__link--anchor
             link__hover-effect
@@ -77,9 +77,11 @@
         </a>
       </div>
     </header>
-    <button class="mail__btn click" onclick="toggleModal()">
-      <i class="fas fa-envelope"></i>
-    </button>
+    <a href="#">
+      <button class="mail__btn click" onclick="toggleModal()">
+        <i class="fas fa-envelope"></i>
+      </button>
+    </a>
     <a href="#projects" class="scroll">
       <div class="scroll__icon click"></div>
     </a>
@@ -166,7 +168,7 @@
     <img src="./assets/semi circle.svg" class="shape shape--8">
   </section>
 
-  <section id=" projects">
+  <section id="projects">
     <div class="container">
       <div class="row">
         <h1 class="section__title">
@@ -276,7 +278,7 @@
             link__hover-effect
             link__hover-effect--white
           "> LinkedIn</a>
-          <a href="#" class="
+          <a href="#" onclick="toggleModal()" class="
             footer__social--link
             link__hover-effect
             link__hover-effect--white
