Content/linking update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="#projects" class="
             nav__link--anchor
             link__hover-effect
-            link__hover-effect- -black
+            link__hover-effect--black
           ">Projects</a>
         </li>
         <li class="nav__link" onclick="toggleModal()">
@@ -66,13 +66,13 @@
         </p>
       </div>
       <div class="social__list">
-        <a href="#" class="social__link click">
+        <a href="https://www.linkedin.com/in/darius-burinskis-348b97204/" target="_blank" class="social__link click">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="#" class="social__link click">
+        <a href="https://github.com/DevBDarius" target="_blank" class="social__link click">
           <i class="fab fa-github"></i>
         </a>
-        <a href="./assets/toDelete (probably)/David Bragg Resume.pdf" target="_blank" class="social__link click">
+        <a href="./assets/DBurinskis_Frontend_2022.pdf" target="_blank" class="social__link click">
           <i class="fas fa-file-pdf"></i>
         </a>
       </div>
@@ -90,36 +90,50 @@
         <h3 class="modal__title modal__title--about">Here's a little about me</h3>
         <h4 class="modal__subtitle modal__subtitle--about">Frontend software engineer</h4>
         <p class="modal__para">
-          Lorem <span class="orange">ipsum</span>, dolor sit amet consectetur <span class="orange">adipisicing</span>
-          elit. Ex ipsum eos, quia facere reprehenderit, <span class="orange">autem</span> hic architecto repellat
-          harum, at quam ratione quis officiis <span class="orange">consectetur</span> cumque.
-          <br>
-          Lorem ipsum dolor
+          I care about creating <b class="orange">performant</b>, <b class="orange">polished</b> web applications with <b class="orange">great UX</b>. I code professionally since 2021.
         </p>
         <div class="modal__languages">
           <figure class="modal__language">
             <img class="modal__language--img"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-              alt="">
+              src="./assets/tech logos/html5.png"
+              alt="html">
             <span class="language__name">HTML</span>
           </figure>
           <figure class="modal__language">
             <img class="modal__language--img"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-              alt="">
-            <span class="language__name">HTML</span>
+              src="./assets/tech logos/css3.png"
+              alt="CSS">
+            <span class="language__name">CSS</span>
           </figure>
           <figure class="modal__language">
             <img class="modal__language--img"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-              alt="">
-            <span class="language__name">HTML</span>
+              src="./assets/tech logos/js.png"
+              alt="JS">
+            <span class="language__name">JavaScript</span>
           </figure>
           <figure class="modal__language">
             <img class="modal__language--img"
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-              alt="">
-            <span class="language__name">HTML</span>
+              src="./assets/tech logos/ts.png"
+              alt="ts">
+            <span class="language__name">TypeScript</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img"
+              src="./assets/tech logos/java.png"
+              alt="java">
+            <span class="language__name">Java</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img"
+              src="./assets/tech logos/python.png"
+              alt="python">
+            <span class="language__name">Python</span>
+          </figure>
+          <figure class="modal__language">
+            <img class="modal__language--img"
+              src="./assets/tech logos/react.png"
+              alt="react">
+            <span class="language__name">React</span>
           </figure>
         </div>
       </div>
@@ -177,25 +191,23 @@
         <ul class="project__list">
           <li class="project">
             <div class="project__wrapper">
-              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <img src="./assets/Library mockup.png" class="project__img" alt="">
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Car Sales Project
+                  E-commerce Library
                 </h3>
                 <h4 class="project__description--subtitle">
-                  Html, CSS, JavaScript, Vue, Vuex
+                  Html, CSS, JavaScript, React
                 </h4>
                 <p class="project__description--para">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
-                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
-                  accusantium?
+                  A project I did to learn React and practice it's killer features, like components, hooks, routing etc. I implemented e-commerce functionality, like adding items to a cart, sorting items by rating/price. I also focused on making the design responsive and following good coding practices like DRY and KISS
                 </p>
                 <div class="project__description--links">
-                  <a href="" class="project__description--link">
+                  <a href="https://github.com/DevBDarius/Ecommerce-Library-React" target="_blank" class="project__description--link">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="" class="project__description--link">
+                  <a href="https://fs-ecommerce-react.herokuapp.com/" target="_blank" class="project__description--link">
                     <i class="fas fa-link"></i>
                   </a>
                 </div>
@@ -204,26 +216,26 @@
           </li>
           <li class="project">
             <div class="project__wrapper">
-              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <img src="./assets/Personal webpage mockup.png" class="project__img" alt="">
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Car Sales Project
+                  This website!
                 </h3>
                 <h4 class="project__description--subtitle">
-                  Html, CSS, JavaScript, Vue, Vuex
+                  Html, CSS, JavaScript
                 </h4>
                 <p class="project__description--para">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
-                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
-                  accusantium?
+                  Done entirely in vanilla JavaScript. I'm most proud of the squiggly animations and the dark mode. Ohh and if you haven't tried already, 
+                  <a href="#">
+                    <b class="orange click" onclick="toggleModal()">
+                      you can send me an email!
+                    </b>
+                  </a>
                 </p>
                 <div class="project__description--links">
-                  <a href="" class="project__description--link">
+                  <a href="https://github.com/DevBDarius/devbdarius.github.io" target="_blank" class="project__description--link">
                     <i class="fab fa-github"></i>
-                  </a>
-                  <a href="" class="project__description--link">
-                    <i class="fas fa-link"></i>
                   </a>
                 </div>
               </div>
@@ -231,25 +243,23 @@
           </li>
           <li class="project">
             <div class="project__wrapper">
-              <img src="./assets/blinker mockup.png" class="project__img" alt="">
+              <img src="./assets/asteroids.png" class="project__img" alt="">
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Car Sales Project
+                  Asteroids
                 </h3>
                 <h4 class="project__description--subtitle">
-                  Html, CSS, JavaScript, Vue, Vuex
+                  Python, CodeSkulptor
                 </h4>
                 <p class="project__description--para">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eos, ad assumenda atque animi mollitia
-                  ipsum minus, ex quam alias nobis consectetur error molestiae in sunt veritatis aperiam adipisci
-                  accusantium?
+                  A little game I made in 2020 as part of Coursera's "Interactive programming in Python". Game development is soo fun!! Solving rotation, acceleration problems was challenging, but worthwile. Did you know mathematicians, physicists and computer scientists all solve movement problems differently?
                 </p>
                 <div class="project__description--links">
-                  <a href="" class="project__description--link">
+                  <a href="https://github.com/DevBDarius/asteroids" target="_blank" class="project__description--link">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="" class="project__description--link">
+                  <a href="https://py2.codeskulptor.org/#user49_ZiPUS3yfTF_11.py" target="_blank" class="project__description--link">
                     <i class="fas fa-link"></i>
                   </a>
                 </div>
@@ -268,12 +278,12 @@
           <img src="./assets/logo.svg" class="footer__logo--img" alt="">
         </figure>
         <div class="footer__social--list">
-          <a href="#" class="
+          <a href="https://github.com/DevBDarius" target="_blank" class="
             footer__social--link
             link__hover-effect
             link__hover-effect--white
           "> Github</a>
-          <a href="#" class="
+          <a href="https://www.linkedin.com/in/darius-burinskis-348b97204/" target="_blank" class="
             footer__social--link
             link__hover-effect
             link__hover-effect--white
@@ -283,7 +293,7 @@
             link__hover-effect
             link__hover-effect--white
           "> Contact</a>
-          <a href="#" class="
+          <a href="./assets/DBurinskis_Frontend_2022.pdf" target="_blank" class="
             footer__social--link
             link__hover-effect
             link__hover-effect--white
